# JRBits_SHIT

./: .gitignore  CMakeLists.txt  CMakeSettings.json  JRBits.cpp  cpp_for_testing.cpp  drawable.cpp  drawable.h  main.cpp
Images/: ListOfFiles.txt
Physics/: CMakeLists.txt  double_i.cpp  double_i.h  object.cpp  object.h  physics.h  vectorNd.cpp  vectorNd.h  world.cpp  world.h
Physics/Tests/: CmakeLists.txt  DoubleITest.cpp  ObjectTest.cpp  Vector2DTest.cpp
Tests/: collisions.cpp  cpp_for_testing.cpp  memory_leaks.cpp
Utils/: CMakeLists.txt  logger.hpp  utils.cpp  utils.h
__DISABLED__Tests/: CMakeLists.txt  test.cpp
